[parser only] left parser only, tests for wrapper and representations